fixed the home page getting too wide on desktop

--- a/src/components/HomeScreen/HomeScreen.css
+++ b/src/components/HomeScreen/HomeScreen.css
@@ -5,8 +5,9 @@
 }
 
 .intro {
-  background-color: #232e37;
   padding: 20px;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .intro .row {
